--- a/TravelTrail/css/index.css
+++ b/TravelTrail/css/index.css
@@ -65,8 +65,8 @@ h1 {
 }
 
 .user-profile {
-    height: 85px;
-    width: 85px;
+    height: 75px;
+    width: 75px;
     border-radius: 50%;
     background-color: red;
     margin-right: 1vw;
@@ -160,11 +160,72 @@ h1 {
 }
 
 #about{
-    background-color: red;
+    background: linear-gradient(to bottom, #F4E2D8, #D2B48C, #B2A589, #CC7752);
     height: 100vh;
 }
 
 #contact{
-    background-color: greenyellow;
+    background: linear-gradient(to bottom, #CC7752, #8B5A2B, #704214, #4B2C20);
     height: 100vh;
+}
+
+#about-details{
+    display: flex;
+    justify-content: space-between;
+}
+
+#left-about{
+    width: 40%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.founder-pic{
+    width: 130px;
+    height: 130px;
+    border-radius: 50px;
+    background-color: yellow;
+    background-image: url("../images/dp.jpg");
+    background-position: center;
+    background-size: cover;
+    margin-bottom: 6vh;
+    border: 4px solid black;
+}
+
+.founder-name{
+    font-family: "Joti One", serif;
+    font-size: 40px;
+    color: black;
+}
+
+.founder-title{
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 20px;
+    color: black;
+}
+
+#right-about{
+    width: 60%;
+    height: 100vh;
+}
+
+.about-title{
+    font-family: "Joti One",serif;
+    font-size: 40px;
+    color: black;
+    margin-top: 26vh;
+    margin-left: 5vw;
+    text-decoration: underline;
+}
+
+.about-description{
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 25px;
+    color: black;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    margin-top: 1vh;
 }
