--- a/TravelTrail/css/index.css
+++ b/TravelTrail/css/index.css
@@ -77,7 +77,7 @@ h1 {
     font-family: "Joti One", serif;
     font-size: 30px;
     color: white;
-    margin-right: 80px;
+    margin-right: 8vw;
 }
 
 #right-nav a:hover {
