--- a/css/packages.css
+++ b/css/packages.css
@@ -90,3 +90,76 @@ h1 {
 .user-profile:hover {
     cursor: pointer;
 }
+
+#search-container{
+    display: flex;
+    justify-content: center;
+}
+
+#search-bar{
+    background-color: white;
+    width: 32vw;
+    height: 6vh;
+    border-radius: 10px;
+    position: relative;
+    top: 15vh;
+    border: solid 4px black;
+    text-align: center;
+    font-size: 30px;
+    font-family: "Joti One", serif;
+}
+
+#packages{
+    width: 100vw;
+    height: 65vh;
+    position: fixed;
+    overflow: auto;
+    top: 30vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10vw;
+}
+
+#packages::-webkit-scrollbar{
+    display: none;
+}
+
+.card-image {
+    width: 100%;
+    height: 20vh;
+    max-height: 20vh;
+    border-radius: 16px 16px 0px 0px;
+}
+
+.card {
+    background-color: #f4f4f4;
+    border-radius: 20px;
+    width: 20vw;
+    min-height: 50vh;
+    text-align: center;
+    border: solid 4px black;
+}
+
+.card h2 {
+    font-size: 30px;
+    font-family: "Joti One", serif;
+}
+
+.card p {
+    font-size: 15px;
+    padding: 0px 10px 25px 10px;
+}
+
+.explore-btn{
+    width: 10vw;
+    height: 100vh;
+    background-color: black;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    font-family: "Joti One", serif;
+    padding: 10px 10px 10px 10px;
+}
