--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,10 @@ body {
     padding: 0;
 }
 
+body::-webkit-scrollbar{
+    display: none;
+}
+
 .joti-one-regular {
     font-family: "Joti One", serif;
     font-weight: 400;
