--- a/css/cities.css
+++ b/css/cities.css
@@ -137,6 +137,7 @@ h1 {
     border-radius: 20px;
     width: 20vw;
     min-height: 50vh;
+    max-height: 50vh;
     text-align: center;
     border: solid 4px black;
 }
