--- a/css/cities.css
+++ b/css/cities.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("../images/bg.jpg");
+    background-image: url("../images/scene.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
