--- a/css/citydetails.css
+++ b/css/citydetails.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar{
 }
 
 #header {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: #161616;
     height: 12vh;
     display: flex;
     align-items: center;
@@ -199,7 +199,58 @@ h1 {
 }
 
 #hotels{
-    background-color: pink;
+    background-color: #282828;
     height: 100vh;
     width: 100vw;
+}
+
+#container2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 72vh;
+    position: relative;
+    top: 18vh;
+}
+
+.card {
+    background-color: #626262;
+    border-radius: 20px;
+    width: 45vw;
+    height: 30vh;
+    min-height: 30vh;
+    max-height: 30vh;
+    text-align: center;
+    border: solid 4px black;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.card-image {
+    width: 12vw;
+    height: 12vw;
+    margin-left: 1vw;
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+.content-container{
+    width: 100%;
+    margin-right: 1vw;
+}
+
+.content-container h2{
+    color: black;
+    font-family: 'Joti One', serif;
+    font-size: 25px;
+    text-decoration: underline;
+}
+
+.content-container p{
+    color: black;
+    font-family: 'Joti One', serif;
+    font-size: 12px;
 }
