--- a/css/cities.css
+++ b/css/cities.css
@@ -63,13 +63,16 @@ h1 {
     margin-left: 2vw;
     font-family: "Joti One", serif;
     font-size: 40px;
+    color: white;
 }
 
 .user-profile {
     height: 75px;
     width: 75px;
     border-radius: 50%;
-    background-color: red;
+    background-image: url('../images/user.png');
+    background-position: center;
+    background-size: cover;
     margin-right: 1vw;
 }
 
@@ -111,14 +114,13 @@ h1 {
 
 #packages{
     width: 100vw;
-    height: 65vh;
+    height: 75vh;
     position: fixed;
     overflow: auto;
-    top: 30vh;
+    top: 25vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10vw;
 }
 
 #packages::-webkit-scrollbar{
@@ -129,7 +131,7 @@ h1 {
     width: 100%;
     height: 20vh;
     max-height: 20vh;
-    border-radius: 16px 16px 0px 0px;
+    border-radius: 13px 13px 0px 0px;
 }
 
 .card {
@@ -139,7 +141,10 @@ h1 {
     min-height: 50vh;
     max-height: 50vh;
     text-align: center;
-    border: solid 4px black;
+    border: solid 6px black;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    margin-bottom: 5vh;
 }
 
 .card h2 {
@@ -163,4 +168,9 @@ h1 {
     text-decoration: none;
     font-family: "Joti One", serif;
     padding: 10px 10px 10px 10px;
+}
+
+.explore-btn:hover{
+    background-color: rgb(41, 41, 41);
+    transition: 0.4s;
 }
