--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,9 @@ h1 {
     height: 75px;
     width: 75px;
     border-radius: 50%;
-    background-color: red;
+    background-image: url('../images/user.png');
+    background-size: cover;
+    background-position: center;
     margin-right: 1vw;
 }
 
@@ -125,6 +127,12 @@ h1 {
     border-radius: 8px;
     font-size: 25px;
     cursor: pointer;
+}
+
+.explore-btn:hover{
+    background-color: rgb(41, 41, 41);
+    margin-left: 5vw;
+    transition: 0.6s;
 }
 
 #socials {
