--- a/css/booking.css
+++ b/css/booking.css
@@ -17,8 +17,12 @@ body {
     font-style: normal;
 }
 
+::-webkit-scrollbar{
+    display: none;
+}
+
 #header {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: #161616;
     height: 12vh;
     display: flex;
     align-items: center;
@@ -67,7 +71,9 @@ h1 {
     height: 75px;
     width: 75px;
     border-radius: 50%;
-    background-color: red;
+    background-image: url('../images/user.png');
+    background-position: center;
+    background-size: cover;
     margin-right: 1vw;
 }
 
@@ -89,84 +95,215 @@ h1 {
     cursor: pointer;
 }
 
-#form-container{
-    background-color: #929292;
-    color: black;
-    height: 75vh;
-    width: 96vw;
+#form-background{
+    height: auto;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
     position: relative;
     top: 18vh;
-    margin-left: 2vw;
-    margin-right: 2vw;
-    border-radius: 3px;
+}
+
+#form-container{
+    width: 45vw;
+    height: auto;
+    border-radius: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+#banner{
+    width: 100%;
+    height: 14vh;
+    border-radius: 20px 20px 0px 0px;
+    overflow: hidden;
+    position: relative;
+}
+
+#content{
+    width: 45vw;
+    height: auto;
+    background-color: #606060;
+    position: absolute;
+    top: 14vh;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.banner2-image {
+    width: auto;
+    height: auto;
+}
+
+#opacity{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px 20px 0px 0px;
+    background-color: rgb(0, 0, 0, 0.5);
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
-.container1{
-    height: 75vh;
-    width: 32vw;
-    display: flex;
-    flex-direction: column;
-    border-right: 2px solid #282828;
+.city-name{
+    color: white;
+    font-family: 'Joti One', serif;
+    font-size: 50px;
+    letter-spacing: 2vw;
+    margin: 0;
+    padding: 0;
 }
 
-.container1 h1{
+#content h1{
     color: black;
-    text-decoration: underline;
 }
 
-.title,
-.vehicle,
-.hotel-name{
+label{
+    color: black;
+    font-size: 18px;
+    font-family: "Josefin Sans", sans-serif;
+    margin-left: 2vw;
+    margin-bottom: 1vh;
+    display: block;
+}
+
+hr{
+    border: 2px solid black;
+    margin-top: 3vh;
+}
+
+#calendar-top{
+    width: 45vw;
+    height: auto;
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#calendar-bottom{
+    width: 45vw;
+    height: 8vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#left,
+#right{
+    width: 22vw;
+    height: 100%;
     color: black;
     font-family: 'Joti One', serif;
-    font-size: 40px;
+    font-size: 25px;
+    text-align: center;
+}
+
+input[type="date"]{
+    border-radius: 10px;
+    height: 3vh;
+    width: 9vw;
+    text-align: center;
+    border: 1px solid black;
+}
+
+.ticket-input{
+    height: 3vh;
+    width: 5vh;
+    border-radius: 10px;
+    border: 1px solid black;
+    text-align: center;
+}
+
+#content p{
     margin-left: 2vw;
-    font-weight: 600;
-    text-decoration: underline;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
+    font-size: 20px;
+    font-family: "Josefin Sans", sans-serif;
 }
 
-p{
-    margin: 0;
-}
-
-.sub-title,
-.labels,
-.vehicle-select,
-.vehicles,
-.hotel-select,
-.hotels{
-    color: black;
-    font-family:  "Josefin Sans", sans-serif;
-    margin-left: 2vw;
-    font-size: 22px;
-}
-
-.labels,
-.vehicles,
-.hotels{
-    font-size: 16px;
-    margin-top: 1vh;
-}
-
-.container2{
-    height: 75vh;
-    width: 32vw;
-    border-right: 2px solid #282828;
+#payments{
+    width: 45vw;
+    height: 7vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 5vh;
 }
 
-.date-picker{
-    margin-right: 2vw;
-    margin-left: 2vw;
+#pay-left{
+    width: 22vw;
+    height: 7vh;
+    display: flex;
+    justify-content: center;
 }
 
-.container3{
-    height: 75vh;
-    width: 32vw;
+#pay-right{
+    width: 22vw;
+    height: 7vh;
+    display: flex;
+    justify-content: center;
+}
+
+.card{
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.bank-btn{
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+}
+
+.bank-btn:active{
+    border: 3px solid white;
+}
+
+#bank-options {
+    margin-top: 20px;
+    margin-left: 4vw;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+#bank-options label {
+    margin: 1vh 0;
+    padding-bottom: 3vh;
+}
+
+#footer{
+    width: 100vw;
+    height: 20vh;
+    margin-top: 200vh;
+}
+
+.bank-label{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.pay{
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
+    border: none;
+    width: 10vw;
+    height: 5vh;
 }
