--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ body::-webkit-scrollbar{
 }
 
 #header {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: #161616;
     height: 12vh;
     display: flex;
     align-items: center;
@@ -66,6 +66,7 @@ h1 {
     margin-left: 2vw;
     font-family: "Joti One", serif;
     font-size: 40px;
+    color: white;
 }
 
 .user-profile {
