--- a/css/cities.css
+++ b/css/cities.css
@@ -174,3 +174,15 @@ h1 {
     background-color: rgb(41, 41, 41);
     transition: 0.4s;
 }
+
+#loading-animation{
+    background-color: #181818;
+    background-image: url('../images/loading-animation.gif');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 15%;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 10;
+}
