--- a/css/User.css
+++ b/css/User.css
@@ -6,7 +6,7 @@ body {
 }
 
 .sidebar {
-    width: 250px;
+    width: 280px;
     min-height: calc(90vh - 40px);
     background-color: #FFFFFF;
     position: fixed;
@@ -25,6 +25,7 @@ body {
         padding: 10px;
         margin: 0;
         flex-grow: 1;
+        margin-top: 30px;
     }
 
     .sidebar li {
@@ -78,6 +79,7 @@ body {
         .sidebar-header h2 {
             margin: 0; 
             text-align: center; 
+            
         }
 
 .main-content {
@@ -92,8 +94,7 @@ header {
 }
 
 .header-left {
-    display: flex;
-    flex-direction: column;
+    display: block; 
 }
 
 .header-right {
@@ -128,6 +129,7 @@ header {
     margin-left: 5px; 
     vertical-align: middle;
 }
+
 
 /* Table Styling */
 table {
