--- a/css/Report.css
+++ b/css/Report.css
@@ -127,3 +127,71 @@ header {
     margin-left: 5px; 
     vertical-align: middle;
 }
+.report-content {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    gap: 20px;
+}
+
+.report-table, .user-details {
+    background-color: #f4f4f4;
+    padding: 10px; 
+    border-radius: 10px;
+    width: 48%; 
+    border: 1px solid #ccc;
+}
+
+.user-details {
+    background-color: #ffffff; 
+    border: none; 
+    padding: 10; 
+}
+
+.scrollable-table {
+    overflow-y: auto; 
+    max-height: 300px; 
+    border-radius: 10px;
+    overflow: hidden; 
+}
+
+.report-table .total-earnings {
+    margin-top: 15px;
+    background-color: #ffffff; 
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    border: 1px solid #ddd; 
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px 15px; 
+    text-align: center;
+}
+
+th {
+    background-color: #e9e9e9;
+    font-weight: bold;
+    border-bottom: 1px solid #ddd; 
+}
+
+.user-details th {
+    background-color: #000;
+    color: #fff;
+}
+
+td {
+    border-bottom: 1px solid #ddd; 
+}
+
+tr:last-child td {
+    border-bottom: none; 
+}
+
