--- a/css/reorder.css
+++ b/css/reorder.css
@@ -5,7 +5,7 @@ html{
 body {
     margin: 0;
     padding: 0;
-    background-color: #4b4b4b;
+    background-color: #272727;
 }
 
 body::-webkit-scrollbar{
@@ -125,7 +125,7 @@ h2 {
 }
 
 .order-item {
-    background-color: #fff; 
+    background-color: #d1d1d1; 
     margin-bottom: 20px;
     padding: 15px;
     border-radius: 10px;
