--- a/css/index.css
+++ b/css/index.css
@@ -70,13 +70,8 @@ h1 {
 }
 
 .user-profile {
-    height: 75px;
-    width: 75px;
-    border-radius: 50%;
-    background-image: url('../images/user.png');
-    background-size: cover;
-    background-position: center;
-    margin-right: 1vw;
+    margin-right: 1vw !important;
+    margin-top: 5px !important;
 }
 
 #right-nav a {
