--- a/css/userRegister.css
+++ b/css/userRegister.css
@@ -131,7 +131,7 @@ input[type="text"],
 input[type="email"],
 input[type="tel"],
 input[type="password"],
-input[type="file"] {
+input[type="file"]{
     width: 475px;
     padding: 10px;
     border: 1px solid #ccc;
@@ -160,4 +160,14 @@ button:hover {
     background-color: #929292;
     transition: 0.3s;
     cursor: pointer;
+}
+
+select {
+    width: 496px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    font-family: "Josefin Sans", sans-serif;
+    background-color: white;
 }
