--- a/css/Package.css
+++ b/css/Package.css
@@ -130,11 +130,14 @@ header {
     margin-left: 5px; 
     vertical-align: middle;
 }
+
 .country-grid {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     margin-top: 20px;
+    justify-content: center; /* Centers the cards */
+    padding: 0 20px; /* Adds some padding on the sides */
 }
 
 .country-card,
@@ -149,8 +152,8 @@ header {
 
 .country-card {
     width: 200px;
+    margin: 0 auto; /* Centers each card if necessary */
 }
-
 .city-grid {
     display: flex;
     flex-wrap: wrap;
@@ -357,23 +360,47 @@ header {
     background-color: #333;
 }
 
+.itinerary {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
 .itinerary-details-container {
-    flex-grow: 1;
-    text-align: center; 
-    display: flex; 
+    flex-grow: 2; 
+    display: flex;
     flex-direction: column; 
-    justify-content: center; 
-    margin-left: 10px;         
+    justify-content: center;
+    margin-right: 10px;
 }
 
 .itinerary-details-container input {
-    padding: 8px; 
-    height: 38px; 
-    width: 100%; 
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
-    text-align: center; 
+    padding: 8px;
+    height: 38px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
     box-sizing: border-box;
+}
+
+.image-container {
+    flex-grow: 1;
+    text-align: center;
+}
+
+.thumbnail {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: block;
+    margin-top: 10px;
 }
 
 .draggable-container {
@@ -542,4 +569,20 @@ header {
 
 #addCityForm {
     margin-bottom: 40px;
+}
+
+.delete-icon {
+    color: red;
+    cursor: pointer;
+    margin-left: 10px;
+    font-weight: bold;
+}
+.delete-icon:hover {
+    color: darkred;
+}
+
+.file-availability-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
 }
