--- a/css/Package.css
+++ b/css/Package.css
@@ -246,15 +246,16 @@ header {
     flex-direction: column;
 }
 
-.description-textarea {
+.fixed-textarea {
     width: 100%; 
+    height: 60px; 
     resize: none; 
-    border-radius: 5px;
-    border: 1px solid #ccc;
+    border-radius: 5px; 
+    border: 1px solid #ccc; 
     padding: 8px;
-    box-sizing: border-box;
-    max-width: 100%; 
+    box-sizing: border-box; 
 }
+
 
 .description {
     width: 100%; 
