--- a/css/index.css
+++ b/css/index.css
@@ -235,7 +235,7 @@ h1 {
 
 /* Contact CSS */
 #contact {
-    background: linear-gradient(to bottom, #F4E2D8, #D2B48C, #B2A589, #CC7752);
+    background: linear-gradient(to bottom, #CC7752, #B2A589, #D2B48C, #F4E2D8);
     height: 100vh;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
@@ -261,16 +261,17 @@ h1 {
 
 .info-item {
     display: flex;
-    justify-content: flex-start; 
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding-top: 25px;
     gap: 10px;
     margin-bottom: 20px;
-    width: 100%; 
+    width: 100%;
 }
 
 .info-btn {
-    background-color: #f8f9fa;
+    background-color: transparent;
     border: none;
     padding: 20px 30px;
     font-size: 1.2rem;
@@ -278,14 +279,39 @@ h1 {
     border-radius: 25px;
     transition: all 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    width: 100%; 
+    width: 100%;
     max-width: 400px;
-    margin-left: 0; 
+    margin-left: 0;
+    position: relative;
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
 }
 
 .info-btn:hover {
     background-color: #CC7752;
 }
+
+.arrow {
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    border: solid black;
+    border-width: 0 2px 2px 0;
+    padding: 3px;
+    margin-left: 10px;
+}
+
+.up {
+    transform: rotate(-135deg); 
+    -webkit-transform: rotate(-135deg);
+}
+
+.down {
+    transform: rotate(45deg); 
+    -webkit-transform: rotate(45deg);
+}
+
 
 .info-details {
     display: none;
@@ -295,8 +321,15 @@ h1 {
     color: #f0f0f0;
     width: 90%;
     max-width: 400px;
-    margin: 10px auto 0 auto; 
+    text-align: center;
+    margin-top: 10px;
+    transition: all 0.3s ease;
 }
+
+.info-details.open {
+    display: block;
+}
+
 
 .contact {
     padding: 10px;
@@ -328,11 +361,11 @@ h1 {
 }
 
 .footer {
-    background: #CC7752;
+    background: #F4E2D8;
     color: #000000;
     padding: 10px 0;
     text-align: center;
-    font-size: 0.9rem;
+    font-size: 1.5rem;
     width: 100%;
     position: relative;
     bottom: 0;
