--- a/css/Package.css
+++ b/css/Package.css
@@ -2,10 +2,26 @@
     scroll-behavior: smooth;
 }
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     background-color: #E8E8E8;
     margin: 0;
     padding: 0;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
+.joti-one-regular {
+    font-family: "Joti One", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.josefin-sans {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 .sidebar {
@@ -28,14 +44,16 @@ body {
     padding: 10px;
     margin: 0;
     flex-grow: 1;
+    margin-top: 20px;
 }
 
 .sidebar li {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
     color: #333333;
     font-size: 17px;
+    margin-top: 20px;
 }
 
 .sidebar li img {
@@ -47,6 +65,8 @@ body {
 
 .sidebar li a {
     text-decoration: none;
+    font-family: "Joti One", serif;
+    font-size: 20px;
     color: inherit;
     display: flex;
     align-items: center;
@@ -78,6 +98,7 @@ body {
     border-bottom: 1px solid #ddd;
 }
 
+
 .admin-profile {
     display: flex;
     align-items: center;
@@ -100,6 +121,7 @@ body {
 .main-content {
     margin-left: 300px;
     padding: 20px;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 header {
@@ -160,10 +182,10 @@ header {
 .country-grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 40px;
     margin-top: 20px;
-    justify-content: center; /* Centers the cards */
-    padding: 0 20px; /* Adds some padding on the sides */
+    justify-content: center;
+    padding: 0 20px; 
 }
 
 .country-card,
@@ -177,17 +199,23 @@ header {
 }
 
 .country-card {
-    width: 200px;
-    margin: 0 auto; /* Centers each card if necessary */
+    width: 250px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease;
 }
+
 .city-grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 100px;
+    gap: 120px;
     justify-content: center; 
     padding: 20px 0; 
 }
-
 
 .city-card {
     width: 450px;
@@ -198,9 +226,10 @@ header {
 .city-card img,
 .country-card img {
     width: 100%;
-    height: 200px;
+    height: 150px;
     object-fit: cover;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .hotel-dropdown,
@@ -266,10 +295,20 @@ header {
     align-items: flex-start;
 }
 
+.description-textarea:focus {
+    border-color: #007bff;
+    outline: none;
+}
+
+.country-card:hover {
+    transform: scale(1.05); 
+}
+
 .description-container {
-    width: 100%; 
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 10px 0;
 }
 
 .fixed-textarea {
@@ -283,9 +322,16 @@ header {
 }
 
 .description-textarea {
-    width: 100%;
-    height: 40px;
-    resize: none; /
+    width: 100%; 
+    height: 50px; 
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    resize: none; 
+    font-size: 14px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: border-color 0.3s ease;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 .description {
@@ -294,9 +340,11 @@ header {
 }
 
 .description label {
-    font-weight: bold; 
-    margin-bottom: 5px; 
-    display: block; 
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    text-align: left;
+    width: 100%;  
 }
 
 .description-text {
@@ -306,7 +354,8 @@ header {
     border-radius: 5px;
     border: 1px solid #ccc; 
     padding: 8px; 
-    }
+    font-family: "Josefin Sans", sans-serif;
+}
 
 .hotel-item input,
 .hotel-item textarea {
@@ -461,15 +510,16 @@ header {
 /* Add Button - Country */
 .add-package-btn {
     text-align: right;
-    margin-top: 10px;
+    margin-top: 0px;
 }
 .add-package-btn button {
     background-color: #000000; 
     border: none;
     color: white;
-    width: 40px;
-    height: 40px;
-    font-size: 18px;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    font-weight: bold;
     border-radius: 10%;
     transition: all 0.3s ease;
     padding: 0;
@@ -481,55 +531,10 @@ header {
     transform: scale(1.1); 
 }
 
-#addCountryForm .card {
-    border: none;
-    border-radius: 10px;
-    background-color: #f8f9fa; 
-}
-
-#addCountryForm .card-title {
-    font-weight: bold;
-    color: #343a40; 
-}
-
-#addCountryForm .card-body {
-    padding: 30px;
-}
-
-#addCountryForm .form-control {
-    border-radius: 8px;
-    padding: 10px 15px;
-    font-size: 16px;
-    border: 1px solid #ced4da; 
-    transition: border-color 0.3s ease;
-}
-
-#addCountryForm .form-control:focus {
-    border-color: #5e5e5e; 
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.25); 
-}
-
-#addCountryForm .btn-success {
-    background-color: #28a745;
-    border: none;
-    padding: 5px;
-    font-size: 18px;
-    border-radius: 8px;
-    transition: background-color 0.3s ease;
-}
-
-#addCountryForm .btn-success:hover {
-    background-color: #218838; 
-}
-
-#addCountryForm {
-    margin-bottom: 40px;
-}
-
-@media (max-width: 768px) {
-    #addCountryForm .card-body {
-        padding: 20px;
-    }
+.add-country-section {
+    display: flex; 
+    align-items: flex-start;
+    gap: 20px; 
 }
 
 /* Add Button - City */
@@ -617,4 +622,115 @@ header {
     display: flex;
     align-items: center;
     margin-top: 10px;
+}
+
+
+.view-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    background-color: #000000; 
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.view-btn:hover {
+    background-color: #a0a0a0; 
+}
+
+.card-form-container {
+    width: 200px; 
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 100; 
+}
+
+.form-title {
+    font-family: "Joti One", serif;
+    font-size: 18px;
+    text-align: center;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group input[type="text"], 
+.form-group input[type="file"], 
+.form-group textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 14px;
+    font-family: "Josefin Sans", sans-serif;
+    background-color: #f9f9f9;
+    transition: all 0.3s ease;
+    box-sizing: border-box;
+    resize: none;
+}
+
+.form-group input[type="text"]:focus, 
+.form-group input[type="file"]:focus, 
+.form-group textarea:focus {
+    border-color: #333;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.2);
+}
+
+.form-group label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+    font-family: "Joti One", serif;
+    font-size: 14px;
+    color: #333;
+}
+
+.submit-btn {
+    width: 100%;
+    padding: 10px;
+    background-color: #000000;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-family: "Joti One", serif;
+    transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+    background-color: #858585;
+}
+
+.delete-btn {
+    padding: 10px 20px;
+    margin-left: 10px;
+    background-color: #E53935;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.delete-btn:hover {
+    background-color: #ec6666;
 }
